--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 	
 	<meta charset="utf-8">
 	
-	<link rel="stylesheet" href="/blog/css/sk2.css">
+	<link rel="stylesheet" href="/blogcss/sk2.css">
 </head><body><header class="flex">
 
-<div><a href="/blog/"><b>vasant blog</b></a></div>
+<div><a href="/blog"><b>vasant blog</b></a></div>
 
 
 
